# metriq-client

./: .gitignore  .pre-commit-config.yaml  Pipfile  README updated.txt  README.md  method_62.py  pyproject.toml  requirements-dev.txt  setup.cfg  setup.py  setup.py.old
.github/workflows/: release.yaml
docs/: conf.py  index.md  installation.md  quickstart.md
docs/api/: client.md  index.md
docs/api/models/: index.md  page.md  result.md  submission.md  tag.md  task.md
examples/: method_add.py  method_delete.py  method_get.py  method_get_names.py  method_get_submission_count.py  method_update.py  metriq_add.py  metriq_delete.py  metriq_get.py  metriq_hello.py  platform_add.py  platform_get.py  platform_get_names.py  platform_get_submission_count.py  platform_update.py  result_add.py  result_get.py  result_metric_names.py  submission_add.py  submission_add_method.py  submission_add_tag.py  submission_add_task.py  submission_delete.py  submission_get.py  submission_get_by_latest.py  submission_get_by_latest_tag.py  submission_get_by_popular.py  submission_get_by_popular_tag.py  submission_get_by_trending.py  submission_get_by_trending_tag.py  submission_update.py  submission_upvote.py  tag_get.py  tag_get_name.py  tag_get_names.py  task_add.py  task_delete.py  task_get.py  task_get_names.py  task_get_network.py  (+2 more)
metriq/: __init__.py  __main__.py  client.py  config.py  consts.py
metriq/commands/: __init__.py
metriq/models/: __init__.py  conference.py  dataset.py  method.py  moderationReport.py  moderation_report.py  paper.py  platform.py  repository.py  result.py  submission.py  tag.py  task.py  user.py
metriq/models/evaluation/: __init__.py  synchronize.py  table.py
metriq_client/: __init__.py  __main__.py  client.py  config.py  consts.py  errors.py
metriq_client/commands/: __init__.py  app.py
metriq_client/models/: __init__.py  method.py  moderation_report.py  platform.py  result.py  submission.py  tag.py  task.py
