[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "metriq-client"
version = "0.1.2"
description = "Python client for metriq API."
readme = "README.md"
authors = [
    "Viktor Kerkez <alefnula@gmail.com>",
    "UnitaryFund",
    "Daniel Strano <dan@unitary.fund>",
    "Vincent Russo <vincent@unitary.fund>"
]
maintainers = [
    "Viktor Kerkez <alefnula@gmail.com>",
    "UnitaryFund",
    "Daniel Strano <dan@unitary.fund>",
    "Vincent Russo <vincent@unitary.fund>"
]
urls = { "Homepage" = "https://github.com/unitaryfund/metriq-client" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent"
]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.12"
tea-client = { git = "https://github.com/unitaryfund/tea-client.git", branch = "develop" }
typer = "^0.12.5"

[tool.poetry.scripts]
metriq = "metriq.__main__:app"

